--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/platform-browser": "~11.2.14",
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
+    "@ngrx/store": "^13.0.2",
+    "firebase": "^7.0 || ^8.0",
     "ng-zorro-antd": "^11.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.18",
